--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,12 +33,26 @@
             <div class="header-contetn__text">
                 Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и производительностью.
             </div>
-            <a class="header-content__btn" href="#">
+            <a class="button" href="#">
                 Хочу тест драйв
             </a>
         </div>
     </div>
 </header>
+<nav class="menu">
+    <div class="container container-menu">
+        <div class="close-btn"></div>
+        <div class="menu__list">
+            <ul>
+                <li><a href="#">Узнать цену</a></li>
+                <li><a href="#">Характеристики</a></li>
+                <li><a href="#">Тест Драйв</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <section class="slider-top">
     <div class="slider">
         <div class="slider__item" style="background-image: url(images/slide-1.jpg);"></div>
@@ -46,9 +60,145 @@
         <div class="slider__item" style="background-image: url(images/slide-3.jpg);"></div>
     </div>
 </section>
+<section class="statistics">
+    <div class="container">
+        <div class="satistics-items">
+            <div class="statistic-item">
+                <div class="statistic-item__title">
+                    Двигатель
+                </div>
+                <div class="statistic-item__num">
+                    2,1 <span>сек</span>
+                </div>
+                <div class="statistic-item__descr">
+                    разгон до 100 км/x
+                </div>
+            </div>
+            <div class="statistic-item">
+                <div class="statistic-item__title">
+                    Батарея
+                </div>
+                <div class="statistic-item__num">
+                    1000 <span>км</span>
+                </div>
+                <div class="statistic-item__descr">
+                    запас хода
+                </div>
+            </div>
+            <div class="statistic-item">
+                <div class="statistic-item__title">
+                    Скорость
+                </div>
+                <div class="statistic-item__num
+                statistic-item__num--speed">
+                    400 <span>км/ч</span>
+                </div>
+                <div class="statistic-item__descr">
+                    макс скорость
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="video">
+    <div class="container">
+        <img src="images/section-img.jpg" alt="">
+    </div>
+</section>
+<section class="advantages">
+    <div class="container">
+        <div class="advantages-inner">
+            <div class="advantages-inner__row">
+                <div class="advantages-descr">
+                    <div class="advantages__title">Скорость</div>
+                    <div class="advantages__text">
+                        Самый 
+                        быстроразгоняющийся 
+                        серийный автомобиль 
+                        из когда-либо созданных
+                    </div>
+                </div>
 
+                <div class="advantages__img">
+                    <img src="images/advantages-1.jpg" alt="">
+                </div>
+            </div>
 
+            <div class="advantages-inner__row">
 
+                <div class="advantages__img">
+                    <img src="images/advantages-2.jpg" alt="">
+                </div>
+
+                <div class="advantages-descr">
+                    <div class="advantages__text">
+                        <ul>
+                            <li>Датчик дождя</li>
+                            <li>Датчик света</li>
+                            <li>Автопилот</li>
+                            <li>Навигационная система</li>
+                            <li>Обогрев зеркал</li>
+                            <li>Усилитель руля</li>
+                            <li>Панорамная крыша</li>
+                            <li>Ксеноновые фары</li>
+                        </ul>
+                    </div>
+                    <div class="advantages__title 
+                    advantages__title--bottom">Преимущества</div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+<section class="design">
+    <div class="container">
+        <div class="design-images">
+            <img src="images/design.jpg" alt="">
+        </div>
+        <div class="design-row">
+            <div class="design-row__item">
+                <div class="design-row__item-num">01</div>
+                <div class="design-row__item-text">
+                    Новый родстер был разработан бывшим дизайнером Mazda
+                    Францем фон Хольцхаузеном. 
+                    Имеет съёмную стеклянную крышу и кузов с двумя передними
+                    сиденьями плюс два небольших сиденья сзади.
+                </div>
+            </div>
+            <div class="design-row__item">
+                <div class="design-row__item-num">02</div>
+                <div class="design-row__item-text">
+                    Родстер имеет три электродвигателя, один спереди и два
+                    сзади, 
+                    Они обеспечивают полный привод, а также систему адресного 
+                    распределения крутящего момента для лучшего прохождения
+                    поворотов.
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-btn">
+            <a class="button" href="#">
+                Хочу тест драйв
+            </a>
+        </div>
+        <div class="footer-copy">
+            <ul>
+                <li>Tesla © 2020</li>
+                <li><a href="#">Privacy & Legal</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Get Newsletter</a></li>
+                <li><a href="#">Locations</a></li>
+                <li><a href="#">Forums</a></li>
+            </ul>  
+        </div>
+    </div>
+</footer>
 
 
 
